游乐场/Classic/PL/Python/PYFE/C1E
练习 1： 计算机中辅助存储器的作用是什么？ 
c

a) 执行程序的所有计算和逻辑
b) 从互联网上获取网页
c) 长期存储信息，即使在不间断电源的情况下也能保存
d) 从用户获取输入

练习 2： 什么是程序？
在计算机上解决某个问题的代码序列

练习 3： 编译器和解释器有什么区别？
编译器翻译全部代码，之后可能需要动态链接，但无需编译器
解释器运行时动态翻译代码，解释器需持续存在

练习 4： 以下哪项包含“机器码”？
a -> Python 解释器即为程序

a) Python 解释器
b) 键盘
c) Python 源文件
d) 一个文字处理文档

练习 5： 以下代码有什么问题：
"primt" -> 'print'

>>> primt 'Hello world!'
File "<stdin>", line 1
  primt 'Hello world!'
                     ^
SyntaxError: invalid syntax
>>>

练习 6： 在执行以下 Python 代码行后，“x”这样的变量存储在计算机的哪里？
b

x = 123
a) 中央处理器
b) 主存储器
c) 辅助存储器
d) 输入设备
e) 输出设备

练习 7： 以下程序将输出什么：
b

x = 43
x = x - 1
print(x)
a) 43
b) 42
c) x - 1
d) 错误，因为数学上不可能 x = x - 1

练习 8： 使用人类能力的例子解释以下每个概念：
(1) 中央处理器 思考
(2) 主存储器 短期/当前记忆
(3) 辅助存储器 长期记忆/记录
(4) 输入设备 听觉/视觉/味觉
(5) 输出设备 声音/行为
例如，“中央处理器在人类中相当于什么？”